--- a/task3/report/report.tex
+++ b/task3/report/report.tex
@@ -184,7 +184,7 @@ $$
 \frac{u^n_{i, j, k - 1} - 2u^n_{i, j, k} + u^n_{i, j, k + 1}}{h^2}.
 $$
 
-Значения $u^{n + 1}_{i,j,k}$ можно явным образом выражаются через значения на n-м и (n -1)-м шаге. 
+Значения $u^{n + 1}_{i,j,k}$ можно явным образом выражаются через значения на n-м и (n-1)-м шаге. 
 
 Зададим значения $ u_{i, j, k}^{0}, u_{i, j, k}^{1}, \: (x_i, y_j, z_k) \in \omega_h $, исходя из условий (\ref{eqn:condition1}) и (\ref{eqn:condition2}):
 \begin{align}
@@ -290,6 +290,12 @@ $ u^{n + 1}_{1,j,k}, u^{n + 1}_{N - 1,j,k}, u^{n + 1, }_{i,1,k}, u^{n + 1}_{1,N 
     \item вычисляется максимальная погрешность на слое;
     \item если в конфигурации задано сохранение слоя, то слой сохраняется на диск.
     \end{itemize}
+\end{itemize}
+
+В деструкторе класса \classname{Solver}:
+\begin{itemize}
+    \item вычисляем наибольшее время выполнение среди всех процессов и выводим его;
+    \item вызываем \classname{MPI\_Finalize}.
 \end{itemize}
 
 \section{Графики аналитического, посчитанного решений и погрешности}
